--- a/project/package.json
+++ b/project/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "firebase": "^6.3.1",
     "vue": "^2.6.10",
-    "vuetify": "^1.5.5"
+    "vue-router": "^3.0.7",
+    "vuetify": "^1.5.5",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
